JfrEmergencyDump::on_vm_shutdown crashes

XMLWordPrintable

    • jfr
    • b29
    • x86_64
    • windows

        This bug report is about the secondary crash in the original bug JDK-8235366 .
        ----
        [error occurred during error reporting ((null)), id 0xe0000000, Internal Error (t:/workspace/open/src/hotspot/share/runtime/thread.cpp:978)]

        Stack: [0x000000f0b0100000,0x000000f0b0200000]
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [jvm.dll+0xaa9081] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:369)
        V [jvm.dll+0xca9d3b] VMError::report+0xf0b (vmerror.cpp:725)
        V [jvm.dll+0xcab5ee] VMError::report_and_die+0x8ae (vmerror.cpp:1533)
        V [jvm.dll+0xcabce4] VMError::report_and_die+0x64 (vmerror.cpp:1317)
        V [jvm.dll+0x4bee20] report_fatal+0x80 (debug.cpp:286)
        V [jvm.dll+0xc43e6c] Thread::check_possible_safepoint+0x4c (thread.cpp:984)
        V [jvm.dll+0xc43dc4] Thread::check_for_valid_safepoint_state+0x24 (thread.cpp:994)
        V [jvm.dll+0xa5c839] Mutex::lock+0x29 (mutex.cpp:105)
        V [jvm.dll+0x6ea290] JfrRecorderService::rotate+0x90 (jfrrecorderservice.cpp:444)
        V [jvm.dll+0x6bffef] JfrEmergencyDump::on_vm_shutdown+0x1ef (jfremergencydump.cpp:474)
        V [jvm.dll+0xcab1fc] VMError::report_and_die+0x4bc (vmerror.cpp:1420)
        V [jvm.dll+0xcabce4] VMError::report_and_die+0x64 (vmerror.cpp:1317)
        V [jvm.dll+0x4bf122] report_vm_error+0x102 (debug.cpp:264)
        V [jvm.dll+0xcf4c04] ZBarrier::should_mark_through<0>+0x44 (zbarrier.cpp:48)
        V [jvm.dll+0xcf37ef] ZBarrier::mark<1,0,1>+0x4f (zbarrier.cpp:91)
        V [jvm.dll+0xcfcdfe] ZBarrierSetRuntime::load_barrier_on_oop_field_preloaded+0x8e (zbarriersetruntime.cpp:30)
        C 0x0000029452b05295

              Assignee:
              Markus Grönlund
              Reporter:
              Stefan Karlsson
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: