8235390: JfrEmergencyDump::on_vm_shutdown crashes

Reviewed-by: egahlin