src/hotspot/share/jfr/leakprofiler/checkpoint/eventEmitter.cpp
@@ -53,12 +53,15 @@ EventEmitter::~EventEmitter() {
 }
 
 void EventEmitter::emit(ObjectSampler* sampler, int64_t cutoff_ticks, bool emit_all) {
-  assert(JfrStream_lock->owned_by_self(), "invariant");
   assert(sampler != NULL, "invariant");
   ResourceMark rm;
   EdgeStore edge_store;
   if (cutoff_ticks <= 0) {
     // no reference chains
+    MutexLocker lock(JfrStream_lock, Mutex::_no_safepoint_check_flag);
+    // The lock is needed here to prevent the recorder thread (running flush())
+    // from writing old object events out from the thread local buffer
+    // before the required constant pools have been serialized.
     JfrTicks time_stamp = JfrTicks::now();
     EventEmitter emitter(time_stamp, time_stamp);
     emitter.write_events(sampler, &edge_store, emit_all);
